Fixed some page overflow bugs

--- a/SiteReact/ClientApp/src/components/editor/Editor.scss
+++ b/SiteReact/ClientApp/src/components/editor/Editor.scss
@@ -59,9 +59,10 @@
         }
     }
 
-    .tabs_content {
+    .tabs-content {
         display: flex;
         flex-grow: 1;
+        position: relative;
     }
 
     .tab-title {
